[workspace]
packages = ["crates/ivlan-cli"]
resolver = "3"
members = ["crates/ivlan-cli", "crates/ivlan-rpc", "crates/ivland"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3"
iroh = "1.0.0"
log = "0.4.32"
tarpc = { version = "0.37", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
