[package]
name = "ivlan-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ivlan"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
clap = { workspace = true }
dotenv = { workspace = true }
iroh-base = "1.0.0"
ivlan-rpc = { path = "../ivlan-rpc" }
serde = { version = "1.0.228", features = ["derive"] }
tarpc = { workspace = true }
toml = "1.1.2"
tokio = { workspace = true }
