[package]
name = "ivland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = "3.5.2"
dashmap = "6.2.1"
dotenv = { workspace = true }
env_logger = "0.11.10"
etherparse = "0.20.2"
futures = { workspace = true }
fxhash = "0.2.1"
iroh = { workspace = true }
ivlan-rpc = { path = "../ivlan-rpc" }
log = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tun-rs = { version = "2.8.5", features = ["async"] }
